--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -1,8 +1,8 @@
 <div class=" container-fluid p-0 m-0 pt-1 mt-1">
-  <div class="row">
+  <div class="row" *ngFor="let applicant of applicants">
     <div class="col-{{col}}">
       <div class="card small mt-2">
-        <div class="card-header small m-0 p-0"> <button class="btn small btn-link" (click)="selected()">Bookie Oandasan</button>
+        <div class="card-header small m-0 p-0"> <button class="btn small btn-link" (click)="selected()">{{applicant.firstname}} {{applicant.lastname}}</button>
         </div>
         <div class="card-body small">
           <div class="container-fluid row">
@@ -35,39 +35,7 @@
         </div>
 
       </div>
-      <div class="card small mt-2">
-        <div class="card-header small">Dulce Oandasan</div>
-        <div class="card-body small">
-          <div class="container-fluid row">
-            <div class="col-1 " p-o m-0> <img src="assets/B.jpeg" height="75" width="75" aria-label="Pic"> </div>
-
-            <div class="col-11 ">
-              <div class="row">Score:99</div>
-              <div class="row"> Rank:2</div>
-              <div class="row">School: Notre Dame</div>
-              <div class="row">Hobby: IDK</div>
-            </div>
-
-          </div>
-
-
-        </div>
-        <div class="card-footer small">
-          <div>Star Rating:
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-            <i class="fa fa-star"></i>
-          </div>
-
-          <div>Likes: 10
-            <i class="fa fa-thumbs-up"></i>
-
-          </div>
-        </div>
-
-      </div>
+  
     </div>
     <div class="continer-fluid col-3" *ngIf="showSelected">
       <div class="card">
