--- a/src/app/ranking-add/ranking-add.component.html
+++ b/src/app/ranking-add/ranking-add.component.html
@@ -1,3 +1,66 @@
-<p>
-  ranking-add works!
-</p>
+<div class="card container-fluid p-0 m-0">
+  <div class="card-header small bg-dark text-light">Add New Applicant
+
+  </div>
+  <div class="card-body p-0 m-0">
+      <diV class="row ml-2 small text-muted">Basic Info:</diV>
+    <div class="input-group p-1 m-1"> 
+      
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">First Name</span>
+      </div>
+      <input type="text" class="form-control" placeholder="John" aria-label="Username" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Middle Name</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Meadow" aria-label="Username" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Last Name</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Smith" aria-label="Username" aria-describedby="basic-addon1">
+    </div>
+    <diV class="row ml-2 small text-muted">Address:</diV>
+    <div class="input-group p-1 m-1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Address</span>
+      </div>
+      <input type="text" class="form-control" placeholder="13 Lucky Street" aria-label="Address" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Address1</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Apt. 89" aria-label="Address1" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">City</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Dallas" aria-label="Username" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">State</span>
+      </div>
+      <input type="text" class="form-control" placeholder="TX" aria-label="State" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Zip</span>
+      </div>
+      <input type="text" class="form-control" placeholder="33333-2222" aria-label="Zip" aria-describedby="basic-addon1">
+    </div>
+    <diV class="row ml-2 small text-muted">Additional Info:</diV>
+    <div class="input-group p-1 m-1">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">Email</span>
+        </div>
+        <input type="text" class="form-control" placeholder="myemail@email.com" aria-label="Email" aria-describedby="basic-addon1">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">Mobile</span>
+        </div>
+        <input type="text" class="form-control" placeholder="999-888-5555" aria-label="Moblie" aria-describedby="basic-addon1">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">School</span>
+        </div>
+        <input type="text" class="form-control" placeholder="Texas Tech University" aria-label="Username" aria-describedby="basic-addon1">
+      </div>
+  </div>
+  <div class="card-footer small  p-1 m-0 bg-white"><button class="btn btn-primary btn-sm">
+      <i class="fa fa-save"></i>
+      Save</button>
+  </div>
+
+</div>
