--- a/src/app/ui/header/header.component.html
+++ b/src/app/ui/header/header.component.html
@@ -5,6 +5,7 @@
     <div class="navbar-nav">
       <a class="nav-item nav-link active" routerLink='/home' routerLinkActive="active" >Home</a>
       <a class="nav-item nav-link active" routerLink='/ranking' routerLinkActive="active" >Ranking</a>
+      <a class="nav-item nav-link active" routerLink='/ranking-add' routerLinkActive="active" >Add Applicant</a>
       <a class="nav-item nav-link" href="#">About</a>
       <a class="nav-item nav-link" href="#">Contact</a>
     </div>
