--- a/src/app/ranking-add/ranking-add.component.html
+++ b/src/app/ranking-add/ranking-add.component.html
@@ -3,21 +3,22 @@
 
   </div>
   <div class="card-body p-0 m-0">
-      <diV class="row ml-2 small text-muted">Basic Info:</diV>
-    <div class="input-group p-1 m-1"> 
-      
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">First Name</span>
+    <diV class="row ml-2 small text-muted">Basic Info:</diV>
+    <div class="input-group p-1 m-1 small">
+
+      <div class="input-group-prepend small">
+        <span class="input-group-text small" id="basic-addon1">First Name</span>
       </div>
-      <input type="text" class="form-control" placeholder="John" aria-label="Username" aria-describedby="basic-addon1">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">Middle Name</span>
+      <input type="text" class="form-control small" placeholder="John" aria-label="Username" aria-describedby="basic-addon1">
+
+      <div class="input-group-prepend small">
+        <span class="input-group-text small" id="basic-addon1">Middle Name</span>
       </div>
-      <input type="text" class="form-control" placeholder="Meadow" aria-label="Username" aria-describedby="basic-addon1">
-      <div class="input-group-prepend">
-        <span class="input-group-text" id="basic-addon1">Last Name</span>
+      <input type="text" class="form-control small" placeholder="Meadow" aria-label="Username" aria-describedby="basic-addon1">
+      <div class="input-group-prepend small">
+        <span class="input-group-text small" id="basic-addon1">Last Name</span>
       </div>
-      <input type="text" class="form-control" placeholder="Smith" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text" class="form-control small" placeholder="Smith" aria-label="Username" aria-describedby="basic-addon1">
     </div>
     <diV class="row ml-2 small text-muted">Address:</diV>
     <div class="input-group p-1 m-1">
@@ -44,19 +45,58 @@
     </div>
     <diV class="row ml-2 small text-muted">Additional Info:</diV>
     <div class="input-group p-1 m-1">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Email</span>
-        </div>
-        <input type="text" class="form-control" placeholder="myemail@email.com" aria-label="Email" aria-describedby="basic-addon1">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">Mobile</span>
-        </div>
-        <input type="text" class="form-control" placeholder="999-888-5555" aria-label="Moblie" aria-describedby="basic-addon1">
-        <div class="input-group-prepend">
-          <span class="input-group-text" id="basic-addon1">School</span>
-        </div>
-        <input type="text" class="form-control" placeholder="Texas Tech University" aria-label="Username" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Email</span>
       </div>
+      <input type="text" class="form-control" placeholder="myemail@email.com" aria-label="Email" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Mobile</span>
+      </div>
+      <input type="tel" class="form-control" placeholder="999-888-5555" aria-label="Moblie" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">School</span>
+      </div>
+      <input type="text" class="form-control" placeholder="Texas Tech University" aria-label="Username"
+        aria-describedby="basic-addon1">
+      <div class="input-group-prepend table-bordered">
+        <span class="input-group-text table-bordered" id="basic-addon1">Us Grad</span>
+      </div>
+      <!-- <input type="text" class="form-control table-bordered"  aria-label="Username" aria-describedby="basic-addon1"> -->
+      <select>
+        <option value="yes">Yes</option>
+        <option value="no">No</option>
+
+      </select>
+    </div>
+    <diV class="row ml-2 small text-muted">Interview Details:</diV>
+    <div class="input-group p-1 m-1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Interview Date</span>
+      </div>
+      <input type="date" class="form-control" placeholder="01/01/2000" aria-label="InterviewDate" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Interview Season</span>
+      </div>
+      <input type="text" class="form-control" placeholder="2018" aria-label="InterviewSeason" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Faculty Group</span>
+      </div>
+      <select>
+        <option value="group1">Group 1</option>
+        <option value="group2">Group 2</option>
+        <option value="group3">Group 3</option>
+        <option value="group4">Group 4</option>
+      </select>
+      
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Rank</span>
+      </div>
+      <input type="text" class="form-control" placeholder="1" aria-label="Rank" aria-describedby="basic-addon1">
+      <div class="input-group-prepend">
+        <span class="input-group-text" id="basic-addon1">Score</span>
+      </div>
+      <input type="text" class="form-control" placeholder="100" aria-label="Score" aria-describedby="basic-addon1">
+    </div>
   </div>
   <div class="card-footer small  p-1 m-0 bg-white"><button class="btn btn-primary btn-sm">
       <i class="fa fa-save"></i>
