--- a/src/app/ranking-add/ranking-add.component.html
+++ b/src/app/ranking-add/ranking-add.component.html
@@ -12,7 +12,7 @@
       <div class="input-group-prepend small">
         <span class="input-group-text small" id="basic-addon1">First Name</span>
       </div>
-      <input type="text"  class="form-control small" required formControlName="firstName" placeholder="John" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text"  class="form-control small"  formControlName="firstName" placeholder="John" aria-label="Username" aria-describedby="basic-addon1">
 
       <div class="input-group-prepend small">
         <span class="input-group-text small" id="basic-addon1">Middle Name</span>
@@ -21,30 +21,30 @@
       <div class="input-group-prepend small">
         <span class="input-group-text small" id="basic-addon1">Last Name</span>
       </div>
-      <input type="text" class="form-control small" required formControlName="lastName" placeholder="Smith" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text" class="form-control small"  formControlName="lastName" placeholder="Smith" aria-label="Username" aria-describedby="basic-addon1">
     </div>
     <diV class="row ml-2 small text-muted">Address:</diV>
     <div class="input-group p-1 m-1">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Address</span>
       </div>
-      <input type="text" class="form-control" placeholder="13 Lucky Street" aria-label="Address" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" formControlName="address" placeholder="13 Lucky Street" aria-label="Address" aria-describedby="basic-addon1">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Address1</span>
       </div>
-      <input type="text" class="form-control" placeholder="Apt. 89" aria-label="Address1" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" formControlName="address1" placeholder="Apt. 89" aria-label="Address1" aria-describedby="basic-addon1">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">City</span>
       </div>
-      <input type="text" class="form-control" placeholder="Dallas" aria-label="Username" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" formControlName="city" placeholder="Dallas" aria-label="Username" aria-describedby="basic-addon1">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">State</span>
       </div>
-      <input type="text" class="form-control" placeholder="TX" aria-label="State" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" formControlName="state" placeholder="TX" aria-label="State" aria-describedby="basic-addon1">
       <div class="input-group-prepend">
         <span class="input-group-text" id="basic-addon1">Zip</span>
       </div>
-      <input type="text" class="form-control" placeholder="33333-2222" aria-label="Zip" aria-describedby="basic-addon1">
+      <input type="text" class="form-control" formControlName="zip" placeholder="33333-2222" aria-label="Zip" aria-describedby="basic-addon1">
     </div>
     <diV class="row ml-2 small text-muted">Additional Info:</diV>
     <div class="input-group p-1 m-1">
