--- a/src/app/ranking/ranking.component.html
+++ b/src/app/ranking/ranking.component.html
@@ -5,8 +5,9 @@
           <div class="row" *ngFor="let applicant of applicants">
             <div class="col-{{col}}">
               <div class="card small mt-2">
-                <div class="card-header small m-0 p-0"> <button class="btn small btn-link" (click)="selected(applicant)">{{applicant.firstname}}
+                <div class="card-header small m-0 p-0"> <button type="button" class="btn small btn-link" (click)="selected(applicant)">{{applicant.firstname}}
                     {{applicant.lastname}}</button>
+                    <a [routerLink]="['/ranking-add/1']">edit</a>
                 </div>
                 <div class="card-body small">
                   <div class="container-fluid row">
